# ChangeLog for dev-python/gdata
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gdata/ChangeLog,v 1.80 2010/10/26 23:44:53 jer Exp $

  26 Oct 2010; Jeroen Roovers <jer@gentoo.org> gdata-2.0.12.ebuild:
  Stable for HPPA (bug #341621).

  24 Oct 2010; Brent Baude <ranger@gentoo.org> gdata-2.0.12.ebuild:
  stable ppc, bug 341621

  23 Oct 2010; Raúl Porcel <armin76@gentoo.org> gdata-2.0.12.ebuild:
  alpha/arm/ia64/sparc stable wrt #341621

  20 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> gdata-2.0.12.ebuild:
  x86 stable wrt bug #341621

  19 Oct 2010; Markos Chandras <hwoarang@gentoo.org> gdata-2.0.12.ebuild:
  Stable on amd64 wrt bug #341621

  03 Oct 2010; Raúl Porcel <armin76@gentoo.org> gdata-2.0.11.ebuild:
  alpha/arm/ia64/sparc stable wrt #338221

  28 Sep 2010; Brent Baude <ranger@gentoo.org> gdata-2.0.11.ebuild:
  stable ppc, bug 338221

  26 Sep 2010; Markus Meier <maekke@gentoo.org> gdata-2.0.11.ebuild:
  x86 stable, bug #338221

  24 Sep 2010; Markos Chandras <hwoarang@gentoo.org> gdata-2.0.11.ebuild:
  Stable on amd64 wrt bug #338221

*gdata-2.0.12 (20 Sep 2010)

  20 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gdata-2.0.12.ebuild:
  Version bump.

*gdata-2.0.11 (31 Jul 2010)

  31 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gdata-2.0.11.ebuild:
  Version bump.

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> gdata-2.0.10.ebuild:
  Stable for HPPA (bug #324463).

  11 Jul 2010; Raúl Porcel <armin76@gentoo.org> gdata-2.0.10.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #324463

  06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> gdata-2.0.10.ebuild:
  ppc64 stable wrt #324463

  27 Jun 2010; <nixnut@gentoo.org> gdata-2.0.10.ebuild:
  ppc stable #324463

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> gdata-2.0.10.ebuild:
  stable amd64, bug 324463

  23 May 2010; <nixnut@gentoo.org> gdata-2.0.9.ebuild:
  ppc stable #315157
