@@ -1,8 +1,8 @@
 DIST gdata-2.0.10.tar.gz 1628244 RMD160 8c5fdc3f369013f8b219f95e7a62f4805b6e635f SHA1 b3eb311f844c188a1f5f599b5cdc2e732d78c796 SHA256 2b8ffa1bc6e36cf6bce34c7751210bb53c25940c802dc53064df0e85ab1bb427
-DIST gdata-2.0.11.final.tar.gz 1669410 RMD160 70209e080424d35843bb1ccaf8dbacc871275a1d SHA1 ed9a86e879197239ca843cc5a60c6519444c87bb SHA256 fe38688e48988b4b95776c0f2f09eb436909dd2c0f5bb7b0c0494ed18f747be4
 DIST gdata-2.0.12.tar.gz 1688034 RMD160 781118a2b10ad7b9e9210f4f32d084f5b5d74dfd SHA1 31dd10fe69e1017e2a3f45a4b94c7dd960ae5581 SHA256 5cae05a5fffbff5535eb3553bdbe8f00f5b26814970d874dbaf5e9a4f488b49a
+DIST gdata-2.0.13.tar.gz 1677885 RMD160 dd60619b67f093c4c887c39791c4b25a8bbb6be6 SHA1 bb8c2503e66c8822f809a3610ecbb273fa9ed238 SHA256 79c27e4434d000e3b8f88e1859412aaadd7a1e9d33f5aaeea94ac65fdd46404e
 EBUILD gdata-2.0.10.ebuild 1360 RMD160 e63dbcbd40d22af36c50ccaea1a01b3c053a2547 SHA1 e8af84498017efadbe00cac5ca4371e686b53ee3 SHA256 e661ab229a88f5129022381f2425bdf5344ce9907f3b906c13c223ed98a46b47
-EBUILD gdata-2.0.11.ebuild 1495 RMD160 89a5909fb87ffc8e6ae32f2695385a9aa5fb367d SHA1 e4f5719b12d148bbcfd59476df1409df9a51dd17 SHA256 b02ca722a1cadc3406f1c4d4af61eef710db0a3ef753a50cd89b49c5031406df
 EBUILD gdata-2.0.12.ebuild 1358 RMD160 5df9fc146c2c36beb01789bce462c0aee64293a6 SHA1 6d332fe8bd0dc12302686955323879a468951e4e SHA256 c461b599e3a2f446c82b739f548935ebc0967650f1861b6b1d7e8fcea555e01c
-MISC ChangeLog 9789 RMD160 d847937ec548349e9866aeba52de380b1f637765 SHA1 840a4d0f55c2d44e306c158c34976165a751b5cf SHA256 d8ea9ef2f75298555d5619d1615207cbe0989228230457c222dc7b332ccf7d7f
+EBUILD gdata-2.0.13.ebuild 1371 RMD160 9126887a5a0fd2405b1b01372ce7aade3b49296f SHA1 79812abd230f01595678521f5043d2394a8ecaa9 SHA256 0faa6a26dcfe2a57f3d4acc11833df6c4e79010909e0524ad9012ed7cc3d342f
+MISC ChangeLog 9959 RMD160 cee9eb5add9d5ef8cb8bfdbff94629153eba4152 SHA1 a236a1eafd11d5dd88f8ec4faf4313d2fbbb246c SHA256 35ccc2802962ea70c64f215f35e4cf6be05a4f52778fbcd684f68091d6c774cd
 MISC metadata.xml 248 RMD160 3559dd9a9e84aff6bd15e25f8739de14ed621fde SHA1 296c47d4d9c6ace6b687addaffc93e1fd3393c07 SHA256 52b86152bb13610d668b3350a9b8cc31210b8d85c2e124075cea027236cf32b9
