@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/gdata
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gdata/ChangeLog,v 1.80 2010/10/26 23:44:53 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gdata/ChangeLog,v 1.81 2010/12/07 19:32:20 arfrever Exp $
+
+*gdata-2.0.13 (07 Dec 2010)
+
+  07 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -gdata-2.0.11.ebuild, +gdata-2.0.13.ebuild:
+  Version bump.
 
   26 Oct 2010; Jeroen Roovers <jer@gentoo.org> gdata-2.0.12.ebuild:
   Stable for HPPA (bug #341621).
